[package]
name = "vk-alloc"
version = "0.5.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "A segregated list memory allocator for Vulkan."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/vk-alloc"
categories = ["rendering::graphics-api", "rendering"]
keywords = ["vk", "vulkan", "erupt", "allocator", "memory"]
edition = "2018"

[dependencies]
erupt = "0.17"
slotmap = "1.0"
tracing = { version = "0.1", default-features = false, optional = true }
profiling = { version = "0.1", optional = true }

[features]
vk-buffer-device-address = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dev-dependencies]
tracing-subscriber = { version = "0.2", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }
