[package]
name = "vk-alloc"
version = "2.0.2"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "A segregated list memory allocator for Vulkan."
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/vk-alloc"
categories = ["rendering::graphics-api", "rendering"]
keywords = ["vk", "vulkan", "erupt", "allocator", "memory"]
edition = "2018"

[dependencies]
erupt = "0.19"
parking_lot = "0.11"
tracing1 = { version = "0.1", package = "tracing", default-features = false, optional = true }
profiling = { version = "1.0", optional = true }

[features]
tracing = ["tracing1"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
vk-buffer-device-address = []

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
tracing-subscriber = { version = "0.2", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }
